2005-09-14  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gcalctool branched.

2005-09-07  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-desktop, libgnome, libgnomecanvas,
	libgnomeui, gnome-terminal branched.

2005-09-05  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnomemeeting branched.

2005-09-05  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gtkhtml branched.

2005-09-02  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-system-monitor branched.

2005-09-02  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: evolution-exchange, evolution, zenity,
	evolution-data-server. 

2005-08-30  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-games, evince have branched.

2005-08-29  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: epiphany has branched.

2005-08-28  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: glib, gtk+ have branched.

2005-08-20  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-volume-manager has branched.

2005-08-05  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gedit has branched for 2.10.

2005-08-04  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: dasher has been branched.

2005-08-04  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gdm2 has branched for gnome-2-12.

2005-07-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gimp-tiny-fu.

2005-07-27  Danilo Šegan  <danilo@gnome.org>

	Final modules decision for Gnome 2.12.
	
	* translation-status.xml: Comment out "proposed" group.
	evince and gnome-keyring-manager are in desktop now. 
	gpdf and ggv move into HEAD/extras from 2.12/desktop.
	libgnomecups, eggcups back to HEAD/extras.

2005-07-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved evince to proposed.

2005-07-13  Danilo Šegan  <danilo@gnome.org>
