@@ -2459,6 +2459,17 @@
       </component>
     </version>
   </module>
+  <module name="pessulus">
+    <version release="HEAD">
+      <component name="pessulus" dir="pessulus" group="extras">
+        <podir dir="po"/>
+        <potname name="pessulus.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="planner">
     <version release="HEAD">
       <component name="planner" dir="planner" group="office">
