@@ -1,3 +1,7 @@
+2005-09-15  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-status.xml: Added pessulus.
+
 2005-09-14  Danilo Šegan  <danilo@gnome.org>
 
 	* translation-status.xml: gcalctool branched.
